desktop-pwas: Change Manifest::Location for default apps and policy apps

Sets Manifest::EXTERNAL_PREF_DOWNLOAD as the Manifest::Location for
default apps. This way, when a user uninstall a default app, we'll
save this user decision in a pref and avoid installing the app in the
future.

Also changes the location for policy apps to
MANIFEST::EXTERNAL_POLICY_DOWNLOAD, to be consistent with default
apps' location.

Bug: 878663
Change-Id: I3930feb146f2b7e7c92052d983f23d18b3f5ab95
Reviewed-on: https://chromium-review.googlesource.com/1198715
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588732}
Former-commit-id: 50b58dbaf9c217a0fe5c9435b1393eb7b10bb42b