chrome/browser/web_applications/bookmark_apps/policy/web_app_policy_manager_unittest.cc
@@ -108,8 +108,8 @@ class WebAppPolicyManagerTest : public ChromeRenderViewHostTestHarness {
 
   void SimulatePreviouslyInstalledPolicyApp(
       PendingAppManager::AppInfo app_info) {
-    SimulatePreviouslyInstalledApp(std::move(app_info),
-                                   extensions::Manifest::EXTERNAL_POLICY);
+    SimulatePreviouslyInstalledApp(
+        std::move(app_info), extensions::Manifest::EXTERNAL_POLICY_DOWNLOAD);
   }
 
  private:
